# Henri-AFP-work

./: .gitignore  CLAUDE.md  DATAFLOW.md  README.md  pyproject.toml  script_commands.md
code/: README  ipscan_experiment.py  ipscan_experiments.sh  ipscan_experiments_cafa3.sh  models.py  predict.py  prediction_data_predict.sh  process_results.py  requirements.txt  stacking_experiment.py  stacking_experiment.sh  stacking_predict.sh  train_models.py  train_stacking_models.py  train_stacking_models.sh
code/generate_data/: README
code/generate_data/cafa3_data/: cafa3_load_data2.py  cafa_load_data.py  generate_cafa3_data.sh
code/generate_data/in-house_data/: data_processing.py  generate_data.sh  load_data.py
code/generate_data/stacking_data/: generate_stacking_data.py
docs/: IPScan_project_summary.md  feature_generation_protocols.md
src/Holm_AFP/: models.py  predict.sh  process_results.py  stacking_experiment.sh  stacking_predict.py  train_models.py  train_models.sh  train_stacking_models.py  train_stacking_models.sh
src/Holm_AFP/generate_data/: README.md
src/Holm_AFP/generate_data/cafa3_data/: data_processing_cafa.py  data_processing_cafa3.py  data_processing_cafa_3_eval.py  generate_cafa_data.sh  process_results.py
src/Holm_AFP/generate_data/stacking_data/: generate_stacking_data.sh
src/Holm_AFP/optimization/: CV_split.py  config.py  hyperparameter_tuning.py  optimization_settings.py
src/Holm_AFP/preprocessing/: CHANGELOG_v2.md  IPS_PROCESSING_GUIDE.md  QUICK_REFERENCE.md  README.md  example_usage.py  ips_feature_pipeline.py
